--- a/index.md.html
+++ b/index.md.html
@@ -534,7 +534,7 @@
 										</ul>
 								  	</div>
 								  	<div class="card-footer">
-								  		<button type="button" class="btn btn-primary btn-previus-form">Voltar</button>
+								  		<button type="button" class="btn btn-primary btn-previous-form">Voltar</button>
 								  		<button type="button" class="btn btn-primary btn-next-form tutorial">Next</button>
 								  	</div>
 								</div>
@@ -598,7 +598,7 @@
 										</ul>
 								  	</div>
 								  	<div class="card-footer">
-								  		<button type="button" class="btn btn-primary btn-previus-form">Voltar</button>
+								  		<button type="button" class="btn btn-primary btn-previous-form">Voltar</button>
 								  		<button type="button" class="btn btn-primary btn-next-form tutorial" id="btuto3">Next</button>
 								  	</div>
 								</div>
@@ -648,7 +648,7 @@
 										</ul>
 								  	</div>
 								  	<div class="card-footer">
-								  		<button type="button" class="btn btn-primary btn-previus-form">Voltar</button>
+								  		<button type="button" class="btn btn-primary btn-previous-form">Voltar</button>
 								  		<button type="button" class="btn btn-primary btn-next-form tutorial" id="btuto4">Next</button>
 								  	</div>
 								</div>
@@ -675,7 +675,7 @@
 										</ul>
 								  	</div>
 								  	<div class="card-footer">
-								  		<button type="button" class="btn btn-primary btn-previus-form">Voltar</button>
+								  		<button type="button" class="btn btn-primary btn-previous-form">Voltar</button>
 								  		<button type="button" class="btn btn-primary btn-next-form tutorial">Next</button>
 								  	</div>
 								</div>
@@ -740,7 +740,7 @@
 										</ul>
 								  	</div>
 								  	<div class="card-footer">
-								  		<button type="button" class="btn btn-primary btn-previus-form">Voltar</button>
+								  		<button type="button" class="btn btn-primary btn-previous-form">Voltar</button>
 								  		<button type="button" class="btn btn-primary btn-next-form tutorial" id="btuto5">Next</button>
 								  	</div>
 								</div>
@@ -790,7 +790,7 @@
 										</ul>
 								  	</div>
 								  	<div class="card-footer">
-								  		<button type="button" class="btn btn-primary btn-previus-form">Voltar</button>
+								  		<button type="button" class="btn btn-primary btn-previous-form">Voltar</button>
 								  		<button type="button" class="btn btn-primary btn-next-form tutorial" id="btuto6">Next</button>
 								  	</div>
 								</div>
@@ -818,7 +818,7 @@
 										</ul>
 								  	</div>
 								  	<div class="card-footer">
-								  		<button type="button" class="btn btn-primary btn-previus-form">Voltar</button>
+								  		<button type="button" class="btn btn-primary btn-previous-form">Voltar</button>
 								  		<button type="button" class="btn btn-primary btn-next-form tutorial">Next</button>
 								  	</div>
 								</div>
@@ -876,7 +876,7 @@
 										</ul>
 								  	</div>
 								  	<div class="card-footer">
-								  		<button type="button" class="btn btn-primary btn-previus-form">Voltar</button>
+								  		<button type="button" class="btn btn-primary btn-previous-form">Voltar</button>
 								  		<button type="button" class="btn btn-primary btn-next-form tutorial" id="btuto7">Next</button>
 								  	</div>
 								</div>
@@ -922,7 +922,7 @@
 										</ul>
 								  	</div>
 								  	<div class="card-footer">
-								  		<button type="button" class="btn btn-primary btn-previus-form">Voltar</button>
+								  		<button type="button" class="btn btn-primary btn-previous-form">Voltar</button>
 								  		<button type="button" class="btn btn-primary btn-next-form tutorial" id="btuto8">Next</button>
 								  	</div>
 								</div>
