--- a/index.html
+++ b/index.html
@@ -987,6 +987,12 @@
 													Once you click the forward button for a question you will not be allowed to go back to the previous question. </b>
 												</div>
 											</li>
+											<li class = "list-group-item d-flex justify-content-align-items-center">
+												<div>
+												<span> <i class="fa fa-caret-right" aria-hidden="true"> </i> </span>
+												<b> If you don't know an answer you can put <u><em>"X"</em></u> in the answer with confidence 1 and move on.</b>
+												</div>
+											</li>
 										</ul>
 								  	</div>
 								  	<div class="card-footer">
