--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 						<h3> <b> Basic Instructions </b> </h3>
 							- On the following pages will appear 2 steps of the tool tutorial followed by the Q&amp;A about the tool. <br>
 							- In the next screens you will be introduced the search tool. <br>
-							- There will be one approache to map visualization.
+							- There will be one approach to map visualization.
 							- We estimate that it may take between 30 and 40 minutes to complete the questionnaire, so please set aside a time when you can calmly do so. <br>
 
 						<h3> <b> Technical Remarks: </b> </h3>
