--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 	    <meta http-equiv="Content-Security-Policy" content="default-src *;img-src * 'self' data: https:; script-src 'self' 'unsafe-inline' 'unsafe-eval' *; style-src  'self' 'unsafe-inline' *">
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-	    <title>Map Risk and Uncertainty Study</title>
+	    <title>Study of Risk and Uncertainty on Maps</title>
 		<!-- JavaScript-->
 		<script type="text/javascript" src="./js/libs/jquery-3.4.1.js"></script>
 		<script type="text/javascript" src="./js/libs/popper.min.js"></script>
@@ -39,28 +39,29 @@
 	<body>
 		<header class="w3-container w3-sand w3-center" style="padding:28px 16px" id='header'>
 		  	<h1 class="w3-margin w3-jumbo">CIn-UFPE - User Study.</h1>
-		  	<p class="w3-xlarge">Map Risk and Uncertainty Study.</p>
+		  	<p class="w3-xlarge">Study of Risk and Uncertainty on Maps</p>
 		  	<div class="w3-row-padding  w3-container">
 			  	<div class="w3-content">
 			    	<div style="text-align: justify;" class="w3-margin-left">
 						<h3> <b> Goal </b> </h3>
 						We ask that you participate in this study because you have the right profile to contribute to our research. <br>
-							- The aim of this study is to find out the most effective way to portray risks and uncertainties for geographic data visualization for people with and without visualization experience (graphs and the like) and statistics (collection, recording and analysis of numerical sample data). <br>
+							- The aim of this study is to find out the most effective way to portray risks and uncertainties for geographic data visualization for people with and without visualization experience (e.g., plots, graphs) and statistics (e.g., collection, recording and analysis of numerical sample data). <br>
 							- The possible benefits of this research are to know and learn data visualization types, statistical techniques and possible integrations between both that can help the decision making process by people. <br>
-							- But there may also be situations where you feel embarrassed and shy about not knowing the answer to a question or because you don't know what to do in the system, as it may be something new to you.
+							- However, there may also be situations where you feel embarrassed and shy about not knowing the answer to a question or because you don't know what to do in the system, as it may be something new to you.
 							- Your participation is of great value, thank you for your interest. <br>
 
 						<h3> <b> Financial Incentive for Participation </b> </h3>
-						Nothing will be paid to you and you will not be charged to participate in this research, as acceptance is voluntary, but compensation is also guaranteed in cases of damage, proven to result from participation in the research, according to court or extrajudicial decision.
+						Nothing will be paid to you and you will not be charged to participate in this research, as acceptance is voluntary.
 
 						<h3> <b> Basic Instructions </b> </h3>
-							- On the following pages will appear 2 steps of the tool tutorial followed by the Q&amp;A about the tool. <br>
+							- On the following pages you will see 2 steps of the tool tutorial followed by the Q&amp;A about the tool. <br>
+							- When prompted, answer the questions properly as shown in the tutorial step.<br>
 							- In the next screens you will be introduced the search tool. <br>
 							- There will be one approach to map visualization.
 							- We estimate that it may take between 30 and 40 minutes to complete the questionnaire, so please set aside a time when you can calmly do so. <br>
 
 						<h3> <b> Technical Remarks: </b> </h3>
-							- Before you start the tutorial and questions, we request some information about yourself and your experience with data visualization and statistics. These questions are important to understand better the research context. <br>
+							- Before you start the tutorial and questions, we request some information about yourself and your experience with data visualization and statistics. These questions are important to understand better understand the research context. <br>
 							- We ask to open this link in the Google Chrome browser. <br>
 							- Do not reload or turn back the page while filling in the form as it will discard your progress. <br>
 							- If one approach fails to load immediately, please wait a few seconds. <br>
@@ -140,7 +141,7 @@
 							<div id="tuto-form-1" role="tabpanel" class="bs-stepper-pane fade active dstepper-block" aria-labelledby="stepperFormTutoTrigger1">
 					        	<div class="card">
 								  	<div class="card-header">
-								  		<h3 class="card-title">Getting Started - To start we would like knowing a little about yourself.</h3>
+								  		<h3 class="card-title">Getting Started - To start we would like to know a little about yourself.</h3>
 								  	</div>
 								  	<div class="card-block" style="text-align: center;">
 								  		<h4 >Please fill in the fields below correctly:</h4>
@@ -158,7 +159,7 @@
 											      	<label for="idade">How old are you?</label>
 											      	<input type="number" class="form-control" id="idade" name="idade"  min="0" max="100" required placeholder="35">
 											      	<div class="invalid-tooltip">
-													    You need choose one!
+													    You need to choose one!
 													</div>
 											    </div>
 											    <div class="form-group col-md-2">
@@ -170,26 +171,26 @@
 											        	<option value="Não Desejo Opinar">Don't wanna say.</option>
 											      	</select>
 											      	<div class="invalid-tooltip">
-													    You need choose one!
+													    You need to choose one!
 													</div>
 											    </div>
 											    <div class="form-group col-md-3">
 											    	<label for="escolaridade">What is your educational level?</label>
 											    	<select id="escolaridade" class="form-control" name="escolaridade" required>
 											    		<option disabled selected value> Pick one </option>
-											    		<option value="Ensino Médio Incompleto">Incomplete high school</option>
-											        	<option value="Ensino Médio Completo">Complete high school</option>
-											        	<option value="Ensino Superior Incompleto">Incomplete undergraduate</option>
-											        	<option value="Ensino Superior Completo">Complete undergraduate</option>
-											        	<option value="Pós Graduação Incompleta">Incomplete specialization</option>
-											        	<option value="Pós Graduação Completa">Complete specialization</option>
-											        	<option value="Mestrado Incompleto">Incomplete master research</option>
-											        	<option value="Mestrado Completo">Complete master research</option>
-											        	<option value="Doutorado Incompleto">Incomplete doctorate degree</option>
-											        	<option value="Doutorado Completo">Complete doctorate degree</option>
+											    		<option value="Ensino Médio Incompleto">High school (incomplete)</option>
+											        	<option value="Ensino Médio Completo">High school</option>
+											        	<option value="Ensino Superior Incompleto">Undergraduate (incomplete)</option>
+											        	<option value="Ensino Superior Completo">Bachelor's degree</option>
+											        	<option value="Pós Graduação Incompleta">Specialization (incomplete)</option>
+											        	<option value="Pós Graduação Completa">Specialization</option>
+											        	<option value="Mestrado Incompleto">Master’s degree (incomplete)</option>
+											        	<option value="Mestrado Completo">Master’s degree</option>
+											        	<option value="Doutorado Incompleto">Doctoral degree (incomplete)</option>
+											        	<option value="Doutorado Completo">Doctoral degree</option>
 											      	</select>
 											      	<div class="invalid-tooltip">
-													    You need choose one!
+													    You need to choose one!
 													</div>
 											    </div>
 											</div>
@@ -203,29 +204,29 @@
 											        	<option value="Sim">Yes</option>
 											      	</select>
 											      	<div class="invalid-tooltip">
-													    You need choose one!
+													    You need to choose one!
 													</div>
 											    </div>
 											    <div class="form-group col-md-4">
-											      	<label for="estatistica">Do you have experience with statistics data?</label>
+											      	<label for="estatistica">Do you have experience with statistical data?</label>
 											      	<select id="estatistica" class="form-control" name="estatistica" required>
 											      		<option disabled selected value> Pick one </option>
 											        	<option value="Não">No</option>
 											        	<option value="Sim">Yes</option>
 											      	</select>
 											      	<div class="invalid-tooltip">
-													    You need choose one!
+													    You need to choose one!
 													</div>
 											    </div>
 											    <div class="form-group col-md-4">
-											      	<label for="visualizacao">Do you have experience with data visualization? (graphs and the like)</label>
+											      	<label for="visualizacao">Do you have experience with data visualization? (i.e., plots, graphs)</label>
 											      	<select id="visualizacao" class="form-control" name="visualizacao" required>
 											      		<option disabled selected value> Pick one </option>
 											        	<option value="Não">No</option>
 											        	<option value="Sim">Yes</option>
 											      	</select>
 											      	<div class="invalid-tooltip">
-													    You need choose one!
+													    You need to choose one!
 													</div>
 											    </div>
 											</div>
@@ -239,25 +240,25 @@
 					        <div id="tuto-form-2" role="tabpanel" class="bs-stepper-pane fade dstepper-none" aria-labelledby="stepperFormTutoTrigger2">
 					        	<div class="card">
 								  	<div class="card-header">
-								  		<h2 class="card-title"><b>Graphs hypotheticals.</b></h2>
+								  		<h2 class="card-title"><b>Hypothetical charts.</b></h2>
 								  	</div>
 								  	<div class="card-block">
 								  		<ul class="list-group">
 											<li class="list-group-item d-flex justify-content-between align-items-center">
 												<div>
 													<h4>
-														The purpose of this technique is to display a sample extracted from hypothetical (drawn) results from a distribution. For each city, a map is created that becomes a kind of frame in a lively presentation that changes over time giving the impression of a movie. You will need to gather information from multiple frames using the visual system or some more mechanical process such as counting to understand the data. The distribution value represented by the city is mapped as a color to the corresponding city. This view uses a single end color scheme; how high or low is the value of each city in each frame.
+														The purpose of this technique is to display a sample extracted from hypothetical (drawn) results from a distribution. For each area, a map is created that becomes a kind of frame in a lively presentation that changes over time giving the impression of a movie. You will need to gather information from multiple frames using the visual system or some more mechanical process such as counting to understand the data. The distribution value represented by the area is mapped as a color to the corresponding area. This view uses a single end color scheme; how high or low is the value of each area in each frame.
 													</h4>
 												</div>
 											</li>
 											<li class="list-group-item d-flex justify-content-between align-items-center">
 												<div>
-													In this paper we use two types of data: 1st observed rainfall data in the state of Pernambuco-Brazil and 2nd taxi rides in the Manhattan Island area of New York. The data types used in each question will be specified in the question step.
+													In this study we use two data sets. The first is a data set comprised of observed rainfall data in the state of Pernambuco (Brazil) and the second data set consists of taxi rides in the Manhattan borough of New York. The data set used in each question will be specified in the question step.
 												</div>
 											</li>
 											<li class="list-group-item d-flex justify-content-between align-items-center">
 												<div>
-													When you ready to proceed just click the button "Next".
+													When you are ready to proceed just click the button "Next".
 												</div>
 											</li>
 										</ul>
@@ -271,7 +272,7 @@
 					        <div id="tuto-form-3" role="tabpanel" class="bs-stepper-pane fade dstepper-none" aria-labelledby="stepperFormTutoTrigger3">
 					        	<div class="card">
 								  	<div class="card-header">
-								  		<h3 class="card-title">Graphs hypotheticals.</h3>
+								  		<h3 class="card-title">Hypothetical charts.</h3>
 								  	</div>
 								  	<div class="card-block">
 								  		<ul class="list-group">
@@ -322,7 +323,7 @@
 											</li>
 											<li class="list-group-item d-flex justify-content-between align-items-center">
 												<div>
-													When you ready to proceed just click the button "Next".
+													When you are ready to proceed just click the button "Next".
 												</div>
 											</li>
 										</ul>
@@ -336,7 +337,7 @@
 					        <div id="tuto-form-4" role="tabpanel" class="bs-stepper-pane fade dstepper-none" aria-labelledby="stepperFormTutoTrigger4">
 					        	<div class="card">
 								  	<div class="card-header">
-								  		<h3 class="card-title">Graphs hypotheticals.</h3>
+								  		<h3 class="card-title">Hypothetical charts.</h3>
 								  	</div>
 								  	<div class="card-block">
 								  		<ul class="list-group">
@@ -367,25 +368,25 @@
 											<li class="list-group-item d-flex justify-content-between align-items-center">
 												<div>
 													<span><i class="fa fa-caret-right" aria-hidden="true"></i></span>
-													Answer to yourself: <b> From 0 to 100, what is the probability to rain between 50 to 150 happen in Recife? And Caruaru? (make an estimate)</b>
+													Answer to yourself: <b> From 0 to 100, what is the probability that it will rain between 50 mm to 150 mm happen in Recife? And Caruaru? (make an estimate)</b>
 												</div>
 											</li>
 											<li class="list-group-item d-flex justify-content-between align-items-center">
 												<div>
 													<span><i class="fa fa-caret-right" aria-hidden="true"></i></span>
-													Answer to yourself: <b> From 0 to 100, what is the probability to rain below 100 in Recife? And Caruaru? (make an estimate) </b>
+													Answer to yourself: <b> From 0 to 100, what is the probability that it will rain below 100 mm in Recife? And Caruaru? (make an estimate) </b>
 												</div>
 											</li>
 											<li class="list-group-item d-flex justify-content-between align-items-center">
 												<div>
 													<span><i class="fa fa-caret-right" aria-hidden="true"></i></span>
-													Answer to yourself: <b> From 0 to 100, what is the probability to rain above 100 in Recife? And Caruaru? (make an estimate) </b>
+													Answer to yourself: <b> From 0 to 100, what is the probability that it will rain above 100 mm in Recife? And Caruaru? (make an estimate) </b>
 												</div>
 											</li>										
 											<li class = "list-group-item d-flex justify-content-align-items-center">
 												<div>
 													<span><i class="fa fa-caret-right" aria-hidden="true"></i></span>
-													There will be comparison questions where you need to know how likely the pink area is to be less than the blue one. Using the tool answer to yourself: <b> From 0 to 100, what is the probability of raining in Recife (pink) be less than Caruaru (blue)? (make an estimate)</b>
+													There will be comparison questions where you need to know how likely the pink area is to be less than the blue one. Using the tool answer to yourself: <b> From 0 to 100, what is the probability that it will rain in Recife (pink) less than Caruaru (blue)? (make an estimate)</b>
 												</div>
 											</li>
 											<li class="list-group-item d-flex justify-content-between align-items-center">
@@ -396,7 +397,7 @@
 											</li>
 											<li class="list-group-item d-flex justify-content-between align-items-center">
 												<div>
-													When you ready to proceed just click the button "Next".
+													When you are ready to proceed just click the button "Next".
 												</div>
 											</li>
 										</ul>
@@ -449,7 +450,7 @@
 											<li class="list-group-item d-flex justify-content-between align-items-center">
 												<div>
 												<span><i class="fa fa-caret-right" aria-hidden="true"></i></span>
-													<b>Questions can be opened or closed (for you pick one option from one list). Whenever the question is about probability of something happening you should answer a value between 0 and 100. No need to add the symbol "%".</b>
+													<b>Questions can be opened or closed (where you pick one option from one list). Whenever the question is about probability of something happening you should answer a value between 0 and 100. No need to add the symbol "%".</b>
 												</div>
 											</li>	
 											<li class="list-group-item d-flex justify-content-between align-items-center">
@@ -523,7 +524,7 @@
 		<div class="container-fluid" id='vis' style="display: none;">
 			<ul class="nav nav-pills" id="pills-tab" role="tablist">
 				<li class="nav-item">
-				    <a class="nav-link" id="pills-media-tab" data-toggle="pill" href="#pills-media" role="tab" aria-controls="pills-media" aria-selected="false"><b>Graphs hypotheticals</b></a>
+				    <a class="nav-link" id="pills-media-tab" data-toggle="pill" href="#pills-media" role="tab" aria-controls="pills-media" aria-selected="false"><b>Hypothetical charts</b></a>
 				</li>
 				<li class="nav-item">
 				    <a class="nav-link" id="pills-confirmacao-tab" data-toggle="pill" href="#pills-confirmacao" role="tab" aria-controls="pills-confirmacao" aria-selected="false"><b>Conclusion</b></a>
